<resources>
    <string name="app_name">Num Increment</string>
    <string name="hello_world"> Hey All </string>
    <string name="mytitle"> Enter Value </string>
    <string name="action_settings"> Settings </string>
    <string name="intro"> Number: </string>
    <string name="numbers"> Numbers </string>
    <string name="add"> Increment (+1) </string>
    <string name="subj"> Decrement (-1) </string>
    <string name="reset"> Reset Number  </string>
    <string name="editText"> Enter Number </string>

</resources>
