<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/padding_left"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="k00364744.helloworld.tamuk.edu.incrementnum.MainActivity">

    <TextView
        android:id="@+id/myTitle"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/intro"
        android:textSize="12sp"
        android:textColor="@color/titlecolor"
        android:paddingTop="16sp"
        android:layout_alignTop="@+id/editText"
        android:layout_toStartOf="@+id/editText"
        android:layout_toLeftOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/editText"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"        />

    <Button
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numbers"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@id/editText"
        android:layout_alignRight="@+id/editText"   />


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/add"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/editText"> </Button>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/subj"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/reset"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="102dp"/>

</RelativeLayout>
